# Mihrab-AI-Agent

./: .env.example  .gitignore  .pypirc  CHANGELOG.md  CONTRIBUTING.md  GROQ_INTEGRATION.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  bf5fc8b Refactor whitespace in streaming tests for improved readability and consistency  groq_test.py  install.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  simple_test.py
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  python-publish.yml
documentation/: GROQ_SETUP.md  documentations_models copy.md  documentations_models.md  handoff_system_readme.md  tracing_documentation.md
examples/: advanced_handoff_example.py  custom_tool_multi_agent_example.py  handoff_multi_agent_example.py  multi_agent_example.py  multi_agent_tool_example.py
scripts/: format_and_check.py
src/llm_agents/: __init__.py  config.py  factory.py
src/llm_agents/core/: __init__.py  agent.py  chat_agent.py  memory.py  memory_task_agent.py  message.py  task_agent.py  types.py
src/llm_agents/docs/: handoff_system.md
src/llm_agents/docs/documentation/: documentation.md  handoff_system_readme.md  memory_and_multi_provider.md  tracing_docuemntation.md
src/llm_agents/examples/: __init__.py  basic_chat_agent.py  benchmarking.py  coordinated_agents.py  error_recovery.py  function_calling.py  handoff_example.py  streaming_chat.py  vision_capabilities.py
src/llm_agents/examples/advanced/: __init__.py  multi_provider_agent.py
src/llm_agents/examples/examples/: advanced_handoff_example.py  custom_tool_multi_agent_example.py  handoff_multi_agent_example.py  multi_agent_example.py  multi_agent_tool_example.py  simple_handoff_example.py
src/llm_agents/handoff/: __init__.py  agent.py  conditions.py  config.py  filters.py
src/llm_agents/models/: __init__.py  adapter.py  base.py  config.py  factory.py  multi_provider.py  provider_config.py  provider_discovery.py  provider_registry.py  provider_stats.py  registry.py  types.py
src/llm_agents/models/providers/: __init__.py  base.py
src/llm_agents/runtime/: __init__.py  context.py  coordinator.py  memory_runner.py  recovery.py  runner.py
src/llm_agents/scripts/: __init__.py  register_groq_models.py
src/llm_agents/scripts/scripts/: format_and_check.py  generate_config.py
src/llm_agents/tools/: __init__.py  base.py  registry.py
src/llm_agents/tools/standard/: __init__.py  data.py  document.py  evaluation.py  filesystem.py  memory.py  search.py  shell.py  text_processing.py  utility.py  visualization.py  web.py
src/llm_agents/utils/: __init__.py  async_utils.py  config_generator.py  dev_tools.py  logging.py  tokenization.py  tracing.py
src/mihrabai/: __init__.py  cli.py  config.py  factory.py
src/mihrabai/agents/: __init__.py  data_agent.py
src/mihrabai/common/: __init__.py  interfaces.py
src/mihrabai/core/: __init__.py  memory.py  message.py  task_agent.py  types.py
src/mihrabai/docs/: advanced_handoff_system.md  multi_agent_system.md
src/mihrabai/docs/documentation/: documentation.md  handoff_documentation.md  handoff_system_readme.md  memory_and_multi_provider.md  tracing_docuemntation.md  tracing_documentation.md
src/mihrabai/docs/guide/: api_reference.md  creating_custom_tools.md  index.md  quick_start_guide.md  using_groq_provider.md  using_mihrab_with_tools.md
src/mihrabai/examples/: README.md  basic_chat_agent.py  benchmarking.py  coordinated_agents.py  error_recovery.py  function_calling.py  handoff_example.py  streaming_chat.py  vision_capabilities.py
src/mihrabai/examples/advanced/: README.md  __init__.py  data_agent_example.py  handoff_example.py  improved_handoff_example.py  memory_and_multi_provider.py  model_fallback_example.py  multi_agent_collaboration.py  multi_provider_agent.py
src/mihrabai/examples/basic/: basic_chat_agent.py  function_calling.py  streaming_chat.py
src/mihrabai/examples/examples/: advanced_handoff_example.py  custom_tool_multi_agent_example.py  handoff_multi_agent_example.py  multi_agent_example.py  multi_agent_tool_example.py  simple_handoff_example.py
src/mihrabai/examples/tools/: code_generation_example.py  custom_tools_example.py  (+2 more)
src/mihrabai/handoff/: __init__.py  agent.py  conditions.py  config.py  filters.py  model_selection.py  types.py
src/mihrabai/models/: __init__.py  adapter.py  base.py  multi_provider.py  provider_config.py  provider_discovery.py  provider_registry.py  provider_stats.py
src/mihrabai/runtime/: __init__.py  context.py  coordinator.py  memory_runner.py  runner.py
src/mihrabai/scripts/: register_groq_models.py
src/mihrabai/tools/: __init__.py
src/mihrabai/utils/: __init__.py  config_generator.py  dev_tools.py  logging.py  tokenization.py  tracing.py
tests/: conftest.py  run_groq_example.py  test_cli.py  test_groq_models.py  test_memory_agent.py
tests/integration/: test_memory_multi_provider.py  test_multi_provider.py
tests/unit/: test_agent.py  test_memory.py  test_provider_streaming.py  test_providers.py  test_task_agent.py
wheel_extract/: mihrab_ai_agent-0.1.0-py3-none-any.whl
(+69 files in other folders)
