[project]
name = "llm-agents"
version = "0.1.0"
description = "A flexible framework for building and deploying LLM-powered agents with multiple provider support"
authors = [
    { name = "Ragii Abdullah Shehab", email = "ragi.shehab1@gmail.com" }
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "groq>=0.4.0",
    "tiktoken>=0.5.0",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3"
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "agents", "ai", "openai", "anthropic", "groq", "framework"]

[project.urls]
"Homepage" = "https://github.com/ragi19/llm-agents"
"Bug Tracker" = "https://github.com/ragi19/llm-agents/issues"
"Documentation" = "https://github.com/ragi19/llm-agents/blob/main/README.md"
"Source Code" = "https://github.com/ragi19/llm-agents"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "build>=0.10.0",
    "twine>=4.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3